--- a/BikeShare.xcframework/Info.plist
+++ b/BikeShare.xcframework/Info.plist
@@ -8,7 +8,7 @@
 			<key>LibraryIdentifier</key>
 			<string>ios-x86_64-simulator</string>
 			<key>LibraryPath</key>
-			<string>common.framework</string>
+			<string>BikeShareKit.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>x86_64</string>
