--- a/BikeShareKit.xcframework/Info.plist
+++ b/BikeShareKit.xcframework/Info.plist
@@ -8,7 +8,7 @@
 			<key>LibraryIdentifier</key>
 			<string>ios-x86_64-simulator</string>
 			<key>LibraryPath</key>
-			<string>BikeShareKit.framework</string>
+			<string>common.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>x86_64</string>
@@ -17,6 +17,18 @@
 			<string>ios</string>
 			<key>SupportedPlatformVariant</key>
 			<string>simulator</string>
+		</dict>
+		<dict>
+			<key>LibraryIdentifier</key>
+			<string>macos-x86_64</string>
+			<key>LibraryPath</key>
+			<string>common.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>x86_64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>macos</string>
 		</dict>
 	</array>
 	<key>CFBundlePackageType</key>
