--- a/BikeShareKit.xcframework/Info.plist
+++ b/BikeShareKit.xcframework/Info.plist
@@ -8,7 +8,7 @@
 			<key>LibraryIdentifier</key>
 			<string>ios-x86_64-simulator</string>
 			<key>LibraryPath</key>
-			<string>common.framework</string>
+			<string>BikeShare.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>x86_64</string>
@@ -22,7 +22,7 @@
 			<key>LibraryIdentifier</key>
 			<string>macos-x86_64</string>
 			<key>LibraryPath</key>
-			<string>common.framework</string>
+			<string>BikeShare.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>x86_64</string>
