--- a/BikeShareKit.xcframework/Info.plist
+++ b/BikeShareKit.xcframework/Info.plist
@@ -5,13 +5,16 @@
 	<key>AvailableLibraries</key>
 	<array>
 		<dict>
+			<key>BinaryPath</key>
+			<string>common.framework/common</string>
+			<key>DebugSymbolsPath</key>
+			<string>dSYMs</string>
 			<key>LibraryIdentifier</key>
-			<string>ios-arm64_x86_64-simulator</string>
+			<string>ios-x86_64-simulator</string>
 			<key>LibraryPath</key>
 			<string>common.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
-				<string>arm64</string>
 				<string>x86_64</string>
 			</array>
 			<key>SupportedPlatform</key>
@@ -20,16 +23,20 @@
 			<string>simulator</string>
 		</dict>
 		<dict>
+			<key>BinaryPath</key>
+			<string>BikeShareKit.framework/Versions/A/BikeShareKit</string>
+			<key>DebugSymbolsPath</key>
+			<string>dSYMs</string>
 			<key>LibraryIdentifier</key>
-			<string>ios-arm64</string>
+			<string>macos-arm64</string>
 			<key>LibraryPath</key>
-			<string>common.framework</string>
+			<string>BikeShareKit.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
 			</array>
 			<key>SupportedPlatform</key>
-			<string>ios</string>
+			<string>macos</string>
 		</dict>
 	</array>
 	<key>CFBundlePackageType</key>
