--- a/BikeShareKit.xcframework/Info.plist
+++ b/BikeShareKit.xcframework/Info.plist
@@ -7,6 +7,8 @@
 		<dict>
 			<key>BinaryPath</key>
 			<string>common.framework/common</string>
+			<key>DebugSymbolsPath</key>
+			<string>dSYMs</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64</string>
 			<key>LibraryPath</key>
@@ -20,13 +22,30 @@
 		</dict>
 		<dict>
 			<key>BinaryPath</key>
-			<string>common.framework/common</string>
+			<string>common.framework/Versions/A/common</string>
 			<key>LibraryIdentifier</key>
-			<string>ios-x86_64-simulator</string>
+			<string>macos-arm64</string>
 			<key>LibraryPath</key>
 			<string>common.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
+				<string>arm64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>macos</string>
+		</dict>
+		<dict>
+			<key>BinaryPath</key>
+			<string>common.framework/common</string>
+			<key>DebugSymbolsPath</key>
+			<string>dSYMs</string>
+			<key>LibraryIdentifier</key>
+			<string>ios-arm64_x86_64-simulator</string>
+			<key>LibraryPath</key>
+			<string>common.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
 				<string>x86_64</string>
 			</array>
 			<key>SupportedPlatform</key>
