--- a/BikeShareKit.xcframework/Info.plist
+++ b/BikeShareKit.xcframework/Info.plist
@@ -6,27 +6,11 @@
 	<array>
 		<dict>
 			<key>BinaryPath</key>
-			<string>common.framework/common</string>
-			<key>DebugSymbolsPath</key>
-			<string>dSYMs</string>
-			<key>LibraryIdentifier</key>
-			<string>ios-arm64</string>
-			<key>LibraryPath</key>
-			<string>common.framework</string>
-			<key>SupportedArchitectures</key>
-			<array>
-				<string>arm64</string>
-			</array>
-			<key>SupportedPlatform</key>
-			<string>ios</string>
-		</dict>
-		<dict>
-			<key>BinaryPath</key>
-			<string>common.framework/Versions/A/common</string>
+			<string>BikeShareKit.framework/Versions/A/BikeShareKit</string>
 			<key>LibraryIdentifier</key>
 			<string>macos-arm64</string>
 			<key>LibraryPath</key>
-			<string>common.framework</string>
+			<string>BikeShareKit.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
@@ -36,13 +20,25 @@
 		</dict>
 		<dict>
 			<key>BinaryPath</key>
-			<string>common.framework/common</string>
-			<key>DebugSymbolsPath</key>
-			<string>dSYMs</string>
+			<string>BikeShareKit.framework/BikeShareKit</string>
+			<key>LibraryIdentifier</key>
+			<string>ios-arm64</string>
+			<key>LibraryPath</key>
+			<string>BikeShareKit.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>ios</string>
+		</dict>
+		<dict>
+			<key>BinaryPath</key>
+			<string>BikeShareKit.framework/BikeShareKit</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64_x86_64-simulator</string>
 			<key>LibraryPath</key>
-			<string>common.framework</string>
+			<string>BikeShareKit.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
